# iRASPA-QT

./: .gitignore  iraspa.pro  readme.md
iraspa/: CMakeLists.txt  iraspa.pro  iraspa.sln  iraspa.vcxproj  iraspa.vcxproj.filters  snapcraft.yaml
iraspa/datafiles/: acknowledgedlicenses.pages  databaseiza.irspdoc  icon-script  iraspa.desktop  license-gpl.pages
iraspa/foundationkit/: aspectratiosingleitemlayout.h  binpacker.cpp  characterset.cpp  characterset.h  flatten.h  foundationkit.h  foundationkit.pri  indexpath.cpp  indexpath.h  lodepng.cpp  logreporting.cpp  logreporting.h  scanner.cpp  scanner.h  serialization.h  signalblocker.h  zip.cpp  zipreader.h  zipwriter.h
iraspa/i18n/: iraspa_ar.ts  iraspa_de.ts  iraspa_en.ts  iraspa_es.ts  iraspa_fa.ts  iraspa_hi.ts  iraspa_ja.ts  iraspa_ko.ts  iraspa_nl.ts  iraspa_pt.ts  iraspa_ru.ts  iraspa_zh_Hans.ts
iraspa/iraspagui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  appearanceadsorptionsurfaceform.cpp  appearanceadsorptionsurfaceform.h  appearanceadsorptionsurfaceform.ui  appearanceannotationform.cpp  appearanceannotationform.h  appearanceannotationform.ui  appearanceatomsform.cpp  appearanceatomsform.h  appearanceatomsform.ui  appearancebondsform.cpp  appearancebondsform.h  appearancebondsform.ui  appearancelocalaxesform.cpp  appearancelocalaxesform.h  appearancelocalaxesform.ui  appearanceprimitiveform.cpp  appearanceprimitiveform.h  appearanceprimitiveform.ui  appearancetreewidgetcontroller.cpp  appearancetreewidgetcontroller.h  appearanceunitcellform.cpp  appearanceunitcellform.h  appearanceunitcellform.ui  atomtreeview.cpp  atomtreeview.h  atomtreeviewchangechargecommand.cpp  atomtreeviewchangechargecommand.h  atomtreeviewchangedisplaynamecommand.cpp  atomtreeviewchangedisplaynamecommand.h  atomtreeviewchangeelementcommand.cpp  atomtreeviewchangeelementcommand.h  atomtreeviewchangeoccupancycommand.cpp  atomtreeviewchangeoccupancycommand.h  atomtreeviewchangepositionxcommand.cpp  atomtreeviewchangepositionxcommand.h  atomtreeviewchangepositionycommand.cpp  atomtreeviewchangepositionycommand.h  (+305 more)
iraspa/iraspakit/: adsorptionsurfacevisualappearanceviewer.cpp  adsorptionsurfacevisualappearanceviewer.h  annotationviewer.cpp  annotationviewer.h  atomstructureviewer.cpp  atomstructureviewer.h  atomtextvisualappearanceviewer.cpp  atomtextvisualappearanceviewer.h  atomviewer.cpp  atomviewer.h  atomvisualappearanceviewer.cpp  atomvisualappearanceviewer.h  bondstructureviewer.cpp  bondstructureviewer.h  bondviewer.cpp  bondviewer.h  bondvisualappearanceviewer.cpp  bondvisualappearanceviewer.h  cellviewer.cpp  cellviewer.h  crystal.cpp  crystal.h  crystalcylinderprimitive.cpp  crystalcylinderprimitive.h  crystalellipsoidprimitive.cpp  crystalellipsoidprimitive.h  crystalpolygonalprismprimitive.cpp  crystalpolygonalprismprimitive.h  cylinderprimitive.cpp  cylinderprimitive.h  densityvolume.cpp  densityvolume.h  displayable.cpp  displayable.h  documentdata.cpp  documentdata.h  ellipsoidprimitive.cpp  ellipsoidprimitive.h  gaussiancubevolume.cpp  gaussiancubevolume.h  (+68 more)
iraspa/mathkit/: bool3.cpp  bool3.h  double2.cpp  double2.h  double3.cpp  double3.h  double3x3.cpp  double3x3.h  double4.cpp  double4.h  double4x3.cpp  double4x3.h  double4x4.cpp  double4x4.h  float2.cpp  float2.h  float3.cpp  float3.h  float3x3.cpp  float3x3.h  float3x4.cpp  float3x4.h  float4.cpp  float4.h  float4x4.cpp  float4x4.h  hashcombine.h  int3.cpp  int3.h  int3x3.cpp  int3x3.h  mathkit.h  mathkit.pri  matrix.cpp  matrix.h  nsrect.cpp  nsrect.h  nssize.cpp  nssize.h  ring.cpp  (+5 more)
iraspa/renderkit/: cappedcylinderdoublebondgeometry.cpp  cappedcylindergeometry.cpp  cappedcylindergeometry.h  glwidget.h  (+148 more)
(+600 files in other folders)
